@@ -2,6 +2,8 @@ Release history for xiate
 
 next
   [Fixed]
+  - Properly set X11 window title on the child application's request.
+    Changing icon names is no longer officially supported, though.
   - Improve window size of newly created floating windows: Set geometry
     hints and use the correct font.
 
